force-app/main/default/objects/Project__c/fields/Internal_Opportunity_Cannot_Close__c.field-meta.xml
<CustomField>
    <fullName>Internal_Opportunity_Cannot_Close__c</fullName>
    <label>Internal Opportunity Cannot Close</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>