force-app/main/default/objects/Project__c/fields/job_Code__c.field-meta.xml
<CustomField>
    <fullName>job_Code__c</fullName>
    <label>Job Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>