force-app/main/default/objects/Project__c/fields/LF_Membership_Required__c.field-meta.xml
<CustomField>
    <fullName>LF_Membership_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LF membership is required if this project is a Subproject, it has membership, and its parent project is The Linux Foundation. The value of this field is set by workflow rules.</description>
    <inlineHelpText>Indicates if LF membership is required in addition to membership to this project. LF membership is required if this project is a Subproject, it has membership, and its parent project is The Linux Foundation.</inlineHelpText>
    <label>LF Membership Required?</label>
    <type>Checkbox</type>
</CustomField>