force-app/main/default/objects/Project__c/fields/LF_Signatory__c.field-meta.xml
<CustomField>
    <fullName>LF_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not used can be deleted</description>
    <label>LF Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>