force-app/main/default/objects/Project__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <inlineHelpText>URL of the project&apos;s LinkedIn page.</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>