force-app/main/default/objects/Project__c/fields/MasterServiceAgreementURL__c.field-meta.xml
<CustomField>
    <fullName>MasterServiceAgreementURL__c</fullName>
    <description>This field is only applicable to Incorporated Entities. This field should not be included on the page layout for most users, since it stores the URL of a file uploaded to the Project Control Center. (Use the Management Services Agreement Link field on page layouts instead.)</description>
    <label>Management Services Agreement File URL</label>
    <type>Url</type>
</CustomField>