force-app/main/default/objects/Project__c/fields/Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Level__c</fullName>
    <label>Maturity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Incubating</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>