force-app/main/default/objects/Project__c/fields/MC_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Project_ID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Project ID</label>
    <type>Text</type>
</CustomField>