force-app/main/default/objects/Project__c/fields/Membership_Autorenew__c.field-meta.xml
<CustomField>
    <fullName>Membership_Autorenew__c</fullName>
    <label>Membership Autorenew</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>