force-app/main/default/objects/Project__c/fields/Membership_Roles_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Membership_Roles_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checkmarked, Membership Roles will not be required for this project.  If left un-checkmarked, Membership Roles WILL be required.</inlineHelpText>
    <label>Membership Roles Not Required?</label>
    <type>Checkbox</type>
</CustomField>