force-app/main/default/objects/Project__c/fields/Membership_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_date__c</fullName>
    <inlineHelpText>For Memberships which are going to start more than a month in future, Use this date so joinnow will set the start date as this date on opportunity. Skip Start date validation is required if this date does not start on 1st of month.</inlineHelpText>
    <label>Membership Start date</label>
    <type>Date</type>
</CustomField>