force-app/main/default/objects/Project__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <inlineHelpText>Indicates if the project has Membership, Crowdfunding (e.g. LFX Funding), or both. Note that a project may have membership requirements that do not have any fees or funding associated with them. In that case, &apos;Membership&apos; is still selected for this field.</inlineHelpText>
    <label>Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Alternate Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>