force-app/main/default/objects/Project__c/fields/Net_Suite_Sync_Custom1__c.field-meta.xml
<CustomField>
    <fullName>Net_Suite_Sync_Custom1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net Suite Sync</label>
    <type>Checkbox</type>
</CustomField>