force-app/main/default/objects/Project__c/fields/Notifications_Group__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Group__c</fullName>
    <inlineHelpText>The email address of the email group to which Join Now notifications will be sent.  The email address entered here will receive emails when a new Join Now submission is received and when a Join Now contract is fully executed.</inlineHelpText>
    <label>Notifications Group</label>
    <type>Email</type>
</CustomField>