force-app/main/default/objects/Project__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The LF staff member who should own New Business Opportunities for this project. In the Project Control Center, this is the equivalent of the &quot;Membership New Sales Owner.&quot;</inlineHelpText>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>