force-app/main/default/objects/Project__c/fields/Other_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Method__c</fullName>
    <label>Other Payment Method</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>