force-app/main/default/objects/Project__c/fields/Parent_Entity_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Parent_Entity_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Incorporated Entity or Series LLC that is the legal parent of the project.</inlineHelpText>
    <label>Legal Parent</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Child Projects of Legal Entity</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>