force-app/main/default/objects/Project__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Incorporated Entity, Series LLC, or Subproject with which this project is associated. For example, a Series LLC entity may have a legal parent of LF Projects, LLC, but be associated with the parent project LF AI Foundation.</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Child Projects</relationshipLabel>
    <relationshipName>Child_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>