force-app/main/default/objects/Project__c/fields/Pinterest__c.field-meta.xml
<CustomField>
    <fullName>Pinterest__c</fullName>
    <inlineHelpText>URL of the project&apos;s Pinterest page.</inlineHelpText>
    <label>Pinterest</label>
    <type>Url</type>
</CustomField>