force-app/main/default/objects/Project__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exploratory Discussions</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Intent To Form</fullName>
            </value>
            <value>
                <fullName>Moving To Full Launch</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>