force-app/main/default/objects/Project__c/fields/Policies_URL__c.field-meta.xml
<CustomField>
    <fullName>Policies_URL__c</fullName>
    <description>This field is applicable to Incorporated Entities, Subprojects, and Series LLCs. This is a URL field in the Project Control Center also (as opposed to a file upload).</description>
    <inlineHelpText>URL at which the project&apos;s policies are publicly available (for example: IP Policy, Privacy Policy, etc.)</inlineHelpText>
    <label>Policies URL</label>
    <type>Url</type>
</CustomField>