force-app/main/default/objects/Project__c/fields/Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method__c</fullName>
    <label>Preferred Payment Method</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>