force-app/main/default/objects/Project__c/fields/Program_Manager_U__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager_U__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>