force-app/main/default/objects/Project__c/fields/Project_Categories__c.field-meta.xml
<CustomField>
    <fullName>Project_Categories__c</fullName>
    <label>RISC-V Subcategory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1110</fullName>
                <label>Services (Fab, design services)</label>
            </value>
            <value>
                <fullName>1111</fullName>
                <label>Chip (SoC, IP, FPGA)</label>
            </value>
            <value>
                <fullName>1112</fullName>
                <label>I/O (Memory, network, storage)</label>
            </value>
            <value>
                <fullName>1113</fullName>
                <label>Systems (ODM, OEM)</label>
            </value>
            <value>
                <fullName>1114</fullName>
                <label>Software (Dev tools, firmware, OS)</label>
            </value>
            <value>
                <fullName>1115</fullName>
                <label>Industry (cloud, mobile, HPC, ML, automotive)</label>
            </value>
            <value>
                <fullName>1116</fullName>
                <label>Research (Universities, Labs, other alliances, etc)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>