force-app/main/default/objects/Project__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MemberFunded</fullName>
            </value>
            <value>
                <fullName>Unfunded</fullName>
            </value>
            <value>
                <fullName>Crowdfunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>