force-app/main/default/objects/Project__c/fields/Project_Entity_Dissolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity_Dissolution_Date__c</fullName>
    <inlineHelpText>For Series LLCs, the date that the series was terminated.  For Incorporated Entities, the date the project dissolution was accepted by the Secretary of State. For Subprojects, the date the project was deemed no longer in operation.</inlineHelpText>
    <label>Dissolution/End Date</label>
    <type>Date</type>
</CustomField>