force-app/main/default/objects/Project__c/fields/Project_Entity_Formation_Document__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity_Formation_Document__c</fullName>
    <description>This field is only applicable to Incorporated Entities. This field should not be included on the page layout for most users, since it stores the URL of a file uploaded to the Project Control Center. (Use the Incorporation Document Link field on page layouts instead.)</description>
    <label>Incorporation Document File URL</label>
    <type>Url</type>
</CustomField>