force-app/main/default/objects/Project__c/fields/Project_Entity_MSA_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity_MSA_Date__c</fullName>
    <description>This field is only applicable to Incorporated Entities.</description>
    <inlineHelpText>Date that the management services agreement takes effect.</inlineHelpText>
    <label>Management Services Effective Date</label>
    <type>Date</type>
</CustomField>