force-app/main/default/objects/Project__c/fields/Project_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Entity_Name__c</fullName>
    <inlineHelpText>The legal name of the entity or formal Subproject name.</inlineHelpText>
    <label>Formal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>