force-app/main/default/objects/Project__c/fields/Project_Funding__c.field-meta.xml
<CustomField>
    <fullName>Project_Funding__c</fullName>
    <label>Project Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>