force-app/main/default/objects/Project__c/fields/Project_Funding_Entity__c.field-meta.xml
<CustomField>
    <fullName>Project_Funding_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Funding Entity</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects (Project Funding Entity)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>