force-app/main/default/objects/Project__c/fields/Project_Logo__c.field-meta.xml
<CustomField>
    <fullName>Project_Logo__c</fullName>
    <label>Logo File URL</label>
    <type>Url</type>
</CustomField>