force-app/main/default/objects/Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>This field is created for Reporting purpose</description>
    <formula>Name+&apos;;&apos;+Parent_Project__r.Name</formula>
    <label>Proj Name</label>
    <type>Text</type>
</CustomField>