force-app/main/default/objects/Project__c/fields/Project_Processing__c.field-meta.xml
<CustomField>
    <fullName>Project_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Processing</label>
    <type>Checkbox</type>
</CustomField>