force-app/main/default/objects/Project__c/fields/Project_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Project_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>