force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <inlineHelpText>The &quot;Prospect&quot; stage is reserved for non-LF projects, e.g. some Community Bridge projects.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formation - Exploratory</fullName>
            </value>
            <value>
                <fullName>Formation - Engaged</fullName>
            </value>
            <value>
                <fullName>Formation - Confidential</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Formation - On Hold</fullName>
            </value>
            <value>
                <fullName>Formation - Disengaged</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Actively Engaged</fullName>
                <isActive>false</isActive>
                <label>Actively Engaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>