force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Back-end field needed to indicate whether this project has any child projects nested below it (via the Parent Project lookup field). If so, this is a Project Group. If not, this is a Project. This field is automatically updated; users should not set this field manually.</description>
    <inlineHelpText>Back-end field needed to indicate whether this project has any child projects nested below it. If so, this is a Project Group. If not, this is a Project.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>Project Group</fullName>
            </value>
            <value>
                <fullName>LF Supported</fullName>
                <isActive>false</isActive>
                <label>LF Supported</label>
            </value>
            <value>
                <fullName>Member Project</fullName>
                <isActive>false</isActive>
                <label>Member Project</label>
            </value>
            <value>
                <fullName>Member Sub-Project</fullName>
                <isActive>false</isActive>
                <label>Member Sub-Project</label>
            </value>
            <value>
                <fullName>Non-Member Project</fullName>
                <isActive>false</isActive>
                <label>Non-Member Project</label>
            </value>
            <value>
                <fullName>Preformation</fullName>
                <isActive>false</isActive>
                <label>Preformation</label>
            </value>
            <value>
                <fullName>Public Domain Project</fullName>
                <isActive>false</isActive>
                <label>Public Domain Project</label>
            </value>
            <value>
                <fullName>Standalone</fullName>
                <isActive>false</isActive>
                <label>Standalone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>