force-app/main/default/objects/Project__c/fields/ProjectSector__c.field-meta.xml
<CustomField>
    <fullName>ProjectSector__c</fullName>
    <label>Tech Sector (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI &amp; ML</fullName>
            </value>
            <value>
                <fullName>Blockchain, Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Security</fullName>
            </value>
            <value>
                <fullName>Embedded &amp; IOT</fullName>
            </value>
            <value>
                <fullName>Platforms</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>