force-app/main/default/objects/Project__c/fields/Reddit__c.field-meta.xml
<CustomField>
    <fullName>Reddit__c</fullName>
    <inlineHelpText>URL of the project&apos;s Reddit page.</inlineHelpText>
    <label>Reddit</label>
    <type>Url</type>
</CustomField>