force-app/main/default/objects/Project__c/fields/Renewal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The LF staff member who should own Renewal Opportunities for this project. In the Project Control Center, this is the equivalent of the &quot;Membership Renewal Owner.&quot;</inlineHelpText>
    <label>Renewal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>