force-app/main/default/objects/Project__c/fields/RepositoryURL__c.field-meta.xml
<CustomField>
    <fullName>RepositoryURL__c</fullName>
    <label>Primary Repository URL</label>
    <type>Url</type>
</CustomField>