force-app/main/default/objects/Project__c/fields/Series_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Series_Agreement_Link__c</fullName>
    <description>This field (rather than the Series Agreement File URL field) should be displayed on the page layout.</description>
    <formula>IF(
   ISBLANK(Series_Agreement_URL__c),
   &quot;&quot;,
   IF(
      OR(
         BEGINS(Series_Agreement_URL__c, &quot;https://&quot;),
         BEGINS(Series_Agreement_URL__c, &quot;http://&quot;)
        ),
      HYPERLINK(
                Series_Agreement_URL__c,
                &quot;Click to open the Series Agreement&quot;,
                &quot;_blank&quot;
               ),
      HYPERLINK(
                &quot;http://&quot; + Series_Agreement_URL__c,
                &quot;Click to open the Series Agreement&quot;,
                &quot;_blank&quot;
               )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a link to the Series Agreement, if one has been uploaded via the file uploader (below).</inlineHelpText>
    <label>Series Agreement Link</label>
    <type>Text</type>
</CustomField>