force-app/main/default/objects/Project__c/fields/Series_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Series_Agreement_URL__c</fullName>
    <description>This field is only applicable to Series LLCs. This field should not be included on the page layout for most users, since it stores the URL of a file uploaded to the Project Control Center. (Use the Series Agreement Link field on page layouts instead.)</description>
    <label>Series Agreement File URL</label>
    <type>Url</type>
</CustomField>