force-app/main/default/objects/Project__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The slug is used for external integrations, like Auto Join, the PCC, and Insights. The value of this field should never change once it&apos;s set.</inlineHelpText>
    <label>Slug</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>