force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>For Series LLCs, the date that the series was created.  For Incorporated Entities, the date that the incorporation document was filed. For Subprojects, the date the project was announced and began operations (not an intent to form date).</inlineHelpText>
    <label>Formation Date</label>
    <type>Date</type>
</CustomField>