force-app/main/default/objects/Project__c/fields/Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_ID__c</fullName>
    <label>Subsidiary ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>