force-app/main/default/objects/Project__c/fields/SugarProjectID__c.field-meta.xml
<CustomField>
    <fullName>SugarProjectID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>