force-app/main/default/objects/Project__c/fields/Target_Account_Report__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Report__c</fullName>
    <label>Target Account Report</label>
    <type>Url</type>
</CustomField>