force-app/main/default/objects/Project__c/fields/Technical_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Technical_Activity_Type__c</fullName>
    <label>Technical Activity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Source Software</fullName>
            </value>
            <value>
                <fullName>Open Standard / Specification</fullName>
            </value>
            <value>
                <fullName>Open Hardware</fullName>
            </value>
            <value>
                <fullName>Open Data</fullName>
            </value>
            <value>
                <fullName>Open Governance Network</fullName>
            </value>
            <value>
                <fullName>Community Initiative</fullName>
            </value>
            <value>
                <fullName>Peer Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>