force-app/main/default/objects/Project__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was added because the product team needs to have test Project records in production, but we need a way to filter those test records out so that they don&apos;t show up on external apps or on the LF website.</description>
    <inlineHelpText>If this is a test Project record used by the product team (i.e. not a real project), check this box to keep this project from showing up externally on the LF website, in external apps, etc.</inlineHelpText>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>