force-app/main/default/objects/Project__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <inlineHelpText>URL of the project&apos;s Twitter page.</inlineHelpText>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>