force-app/main/default/objects/Project__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Primary Website URL</label>
    <type>Url</type>
</CustomField>