force-app/main/default/objects/Project__c/fields/YouTube__c.field-meta.xml
<CustomField>
    <fullName>YouTube__c</fullName>
    <inlineHelpText>URL of the project&apos;s YouTube channel.</inlineHelpText>
    <label>YouTube</label>
    <type>Url</type>
</CustomField>